# rulr

./: Makefile  README.md  pyproject.toml
docs/: _config.yml  dev.md  index.html  index.md  rulr.html  start.md
docs/_includes/: custom-head.html
docs/_sass/minima/: custom-styles.scss
docs/assets/css/: style.css  style.scss
etc/: bash.sh  hi.txt  pycco0.awk
rulr/: :w  __init__.py  __main__.py  cgpt.py  rule1.py  rulr.py  rulrtest.py
tests/: Code.lua  aa.md
